--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "start": "env nest start",
-    "start:dev": "env NODE_ENV=development nest start --watch",
+    "start": "cross-env nest start",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "env nest start --debug",
     "start:prod": "env node dist/src/main",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "migrate:up": "node-pg-migrate up",
+    "migrate:down": "node-pg-migrate down",
+    "migrate:redo": "node-pg-migrate redo",
+    "migrate:create": "node-pg-migrate create"
   },
   "dependencies": {
-    "@nestjs/axios": "^1.0.1",
+    "@nestjs/axios": "^3.1.2",
     "@nestjs/bullmq": "^10.2.2",
     "@nestjs/common": "^10.1.1",
     "@nestjs/core": "^10.1.1",
@@ -31,9 +35,11 @@
     "bullmq": "^5.25.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^14.1.0",
     "ioredis": "^5.3.2",
-    "nestjs-config": "^1.4.8",
+    "nestjs-config": "^1.4.11",
+    "pg": "^8.13.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -51,6 +57,7 @@
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.11.16",
+    "@types/pg": "^8.11.10",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -64,6 +71,7 @@
     "jest": "28.1.0",
     "lint-staged": "^15.2.2",
     "morgan": "^1.10.0",
+    "node-pg-migrate": "^7.8.0",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "supertest": "^6.2.4",
