Add WebSockets and Bull queue

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "nest build",
     "start": "cross-env nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:debug": "env nest start --debug",
+    "start:debug": "cross-env nest start --debug",
     "start:prod": "env node dist/src/main",
     "prepare": "husky install",
     "migrate:up": "node-pg-migrate up",
@@ -29,8 +29,10 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/microservices": "^10.1.1",
     "@nestjs/platform-express": "^10.1.1",
+    "@nestjs/platform-socket.io": "^10.4.12",
     "@nestjs/schedule": "^3.0.1",
     "@nestjs/swagger": "^7.1.2",
+    "@nestjs/websockets": "^10.4.12",
     "app-root-path": "^3.0.0",
     "bullmq": "^5.25.1",
     "class-transformer": "^0.5.1",
@@ -43,6 +45,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^9.0.0"
   },
