--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
     "migrate:redo": "node-pg-migrate redo",
-    "migrate:create": "node-pg-migrate create"
+    "migrate:create": "node-pg-migrate create",
+    "test": "jest"
   },
   "dependencies": {
     "@nestjs/axios": "^3.1.2",
